bitbybit/tests/no_compile/invalid_bit_pos/invalid_bits_pos_u32.rs
use bitbybit::bitfield;

#[bitfield(u32, default = 0)]
struct Test {
    #[bits(31..=32, rw)]
    field: u2,
}

fn main() {}
